<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:minHeight="50dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_youtube"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp"
        android:layout_weight="2"
        android:contentDescription="@string/you_tube"
        android:src="@drawable/ic_youtube_logo" />

    <TextView
        android:id="@+id/tv_trailer_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center_vertical"
        android:padding="8dp"
        tools:text="@string/mock_trailer" />

    <ImageView
        android:id="@+id/iv_share_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share_black_24dp"
        android:tint="@color/colorPrimary" />

</LinearLayout>
